parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    AND_BLOCK
    BEGIN_BLOCK
    BREAK
    CASE
    CLASS
    COMENTARIO
    DEF
    DEFINED
    DO
    DOSPUNTOS
    DOSPUNTOS_IGUAL
    END
    ENSURE
    FLECHA_HASH
    IN
    INTERROGACION
    LENGTH
    LLAVE_DER
    LLAVE_IZQ
    MODULE
    NEXT
    PUNTO
    REDO
    RESERVADA
    RETRY
    RETURN
    SELF
    SUPER
    UNLESS
    UNTIL
    WHEN
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencia
Rule 2     programa -> sentencia programa
Rule 3     sentencia -> asignacion
Rule 4     sentencia -> impresion
Rule 5     sentencia -> array
Rule 6     sentencia -> condicion
Rule 7     asignacion -> variable ASIGNACION valores
Rule 8     impresion -> PUTS PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 9     array -> CORCHETE_IZQ argumentos CORCHETE_DER
Rule 10    condicion -> if
Rule 11    condicion -> if_else
Rule 12    condicion -> if_elsif_else
Rule 13    if -> IF expresion instrucciones END_BLOCK
Rule 14    if -> IF expresion THEN instrucciones END_BLOCK
Rule 15    if_else -> IF expresion instrucciones ELSE instrucciones END_BLOCK
Rule 16    if_else -> IF expresion THEN instrucciones ELSE instrucciones END_BLOCK
Rule 17    if_elsif_else -> IF expresion instrucciones elsif_clauses END_BLOCK
Rule 18    if_elsif_else -> IF expresion THEN instrucciones elsif_clauses END_BLOCK
Rule 19    if_elsif_else -> IF expresion instrucciones elsif_clauses ELSE instrucciones END_BLOCK
Rule 20    if_elsif_else -> IF expresion THEN instrucciones elsif_clauses ELSE instrucciones END_BLOCK
Rule 21    elsif_clauses -> ELSIF expresion instrucciones
Rule 22    elsif_clauses -> ELSIF expresion THEN instrucciones
Rule 23    elsif_clauses -> ELSIF expresion instrucciones elsif_clauses
Rule 24    elsif_clauses -> ELSIF expresion THEN instrucciones elsif_clauses
Rule 25    expresion -> var_expresion
Rule 26    expresion -> var_expresion comparadores var_expresion
Rule 27    expresion -> expresion comparadores expresion
Rule 28    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 29    expresion -> NOT_BLOCK expresion
Rule 30    expresion -> expresion operador_logico expresion
Rule 31    comparadores -> MAYOR_QUE
Rule 32    comparadores -> MENOR_QUE
Rule 33    comparadores -> IGUAL_IGUAL
Rule 34    comparadores -> DIFERENTE
Rule 35    comparadores -> MAYOR_IGUAL
Rule 36    comparadores -> MENOR_IGUAL
Rule 37    operador_logico -> AND
Rule 38    operador_logico -> OR
Rule 39    operador_logico -> NOT
Rule 40    var_expresion -> valor
Rule 41    var_expresion -> booleano
Rule 42    instrucciones -> instruccion
Rule 43    instrucciones -> instruccion instrucciones
Rule 44    instrucciones -> instruccion PUNTO_Y_COMA instrucciones
Rule 45    instruccion -> asignacion
Rule 46    instruccion -> impresion
Rule 47    instruccion -> condicion
Rule 48    instruccion -> llamada_funcion
Rule 49    llamada_funcion -> VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 50    llamada_funcion -> VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
Rule 51    variable -> VARIABLE_LOCAL
Rule 52    variable -> VARIABLE_GLOBAL
Rule 53    variable -> VARIABLE_INSTANCIA
Rule 54    variable -> VARIABLE_CLASE
Rule 55    booleano -> FALSE
Rule 56    booleano -> TRUE
Rule 57    argumentos -> argumento
Rule 58    argumentos -> argumento COMA argumentos
Rule 59    argumento -> booleano
Rule 60    argumento -> operacionAritmetica
Rule 61    argumento -> array
Rule 62    argumento -> empty
Rule 63    empty -> <empty>
Rule 64    valores -> operacionAritmetica
Rule 65    valores -> SIMBOLO
Rule 66    valores -> booleano
Rule 67    valores -> array
Rule 68    valor -> NUMERO
Rule 69    valor -> FLOTANTE
Rule 70    valor -> CADENA
Rule 71    valor -> variable
Rule 72    operacionAritmetica -> valor
Rule 73    operacionAritmetica -> valor operador operacionAritmetica
Rule 74    operador -> MAS
Rule 75    operador -> MENOS
Rule 76    operador -> MULTIPLICAR
Rule 77    operador -> DIVIDIR
Rule 78    operador -> MODULO
Rule 79    operador -> EXPONENCIACION

Terminals, with rules where they appear

ALIAS                : 
AND                  : 37
AND_BLOCK            : 
ASIGNACION           : 7
BEGIN_BLOCK          : 
BREAK                : 
CADENA               : 70
CASE                 : 
CLASS                : 
COMA                 : 58
COMENTARIO           : 
CORCHETE_DER         : 9
CORCHETE_IZQ         : 9
DEF                  : 
DEFINED              : 
DIFERENTE            : 34
DIVIDIR              : 77
DO                   : 
DOSPUNTOS            : 
DOSPUNTOS_IGUAL      : 
ELSE                 : 15 16 19 20
ELSIF                : 21 22 23 24
END                  : 
END_BLOCK            : 13 14 15 16 17 18 19 20
ENSURE               : 
EXPONENCIACION       : 79
FALSE                : 55
FLECHA_HASH          : 
FLOTANTE             : 69
IF                   : 13 14 15 16 17 18 19 20
IGUAL_IGUAL          : 33
IN                   : 
INTERROGACION        : 
LENGTH               : 
LLAVE_DER            : 
LLAVE_IZQ            : 
MAS                  : 74
MAYOR_IGUAL          : 35
MAYOR_QUE            : 31
MENOR_IGUAL          : 36
MENOR_QUE            : 32
MENOS                : 75
MODULE               : 
MODULO               : 78
MULTIPLICAR          : 76
NEXT                 : 
NOT                  : 39
NOT_BLOCK            : 29
NUMERO               : 68
OR                   : 38
PARENTESIS_DER       : 8 28 49 50
PARENTESIS_IZQ       : 8 28 49 50
PUNTO                : 
PUNTO_Y_COMA         : 44
PUTS                 : 8
REDO                 : 
RESERVADA            : 
RETRY                : 
RETURN               : 
SELF                 : 
SIMBOLO              : 65
SUPER                : 
THEN                 : 14 16 18 20 22 24
TRUE                 : 56
UNLESS               : 
UNTIL                : 
VARIABLE_CLASE       : 54
VARIABLE_GLOBAL      : 52
VARIABLE_INSTANCIA   : 53
VARIABLE_LOCAL       : 49 50 51
WHEN                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

argumento            : 57 58
argumentos           : 8 9 49 58
array                : 5 61 67
asignacion           : 3 45
booleano             : 41 59 66
comparadores         : 26 27
condicion            : 6 47
elsif_clauses        : 17 18 19 20 23 24
empty                : 62
expresion            : 13 14 15 16 17 18 19 20 21 22 23 24 27 27 28 29 30 30
if                   : 10
if_else              : 11
if_elsif_else        : 12
impresion            : 4 46
instruccion          : 42 43 44
instrucciones        : 13 14 15 15 16 16 17 18 19 19 20 20 21 22 23 24 43 44
llamada_funcion      : 48
operacionAritmetica  : 60 64 73
operador             : 73
operador_logico      : 30
programa             : 2 0
sentencia            : 1 2
valor                : 40 72 73
valores              : 7
var_expresion        : 25 26 26
variable             : 7 71

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencia
    (2) programa -> . sentencia programa
    (3) sentencia -> . asignacion
    (4) sentencia -> . impresion
    (5) sentencia -> . array
    (6) sentencia -> . condicion
    (7) asignacion -> . variable ASIGNACION valores
    (8) impresion -> . PUTS PARENTESIS_IZQ argumentos PARENTESIS_DER
    (9) array -> . CORCHETE_IZQ argumentos CORCHETE_DER
    (10) condicion -> . if
    (11) condicion -> . if_else
    (12) condicion -> . if_elsif_else
    (51) variable -> . VARIABLE_LOCAL
    (52) variable -> . VARIABLE_GLOBAL
    (53) variable -> . VARIABLE_INSTANCIA
    (54) variable -> . VARIABLE_CLASE
    (13) if -> . IF expresion instrucciones END_BLOCK
    (14) if -> . IF expresion THEN instrucciones END_BLOCK
    (15) if_else -> . IF expresion instrucciones ELSE instrucciones END_BLOCK
    (16) if_else -> . IF expresion THEN instrucciones ELSE instrucciones END_BLOCK
    (17) if_elsif_else -> . IF expresion instrucciones elsif_clauses END_BLOCK
    (18) if_elsif_else -> . IF expresion THEN instrucciones elsif_clauses END_BLOCK
    (19) if_elsif_else -> . IF expresion instrucciones elsif_clauses ELSE instrucciones END_BLOCK
    (20) if_elsif_else -> . IF expresion THEN instrucciones elsif_clauses ELSE instrucciones END_BLOCK

    PUTS            shift and go to state 8
    CORCHETE_IZQ    shift and go to state 9
    VARIABLE_LOCAL  shift and go to state 13
    VARIABLE_GLOBAL shift and go to state 14
    VARIABLE_INSTANCIA shift and go to state 15
    VARIABLE_CLASE  shift and go to state 16
    IF              shift and go to state 17

    programa                       shift and go to state 1
    sentencia                      shift and go to state 2
    asignacion                     shift and go to state 3
    impresion                      shift and go to state 4
    array                          shift and go to state 5
    condicion                      shift and go to state 6
    variable                       shift and go to state 7
    if                             shift and go to state 10
    if_else                        shift and go to state 11
    if_elsif_else                  shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencia .
    (2) programa -> sentencia . programa
    (1) programa -> . sentencia
    (2) programa -> . sentencia programa
    (3) sentencia -> . asignacion
    (4) sentencia -> . impresion
    (5) sentencia -> . array
    (6) sentencia -> . condicion
    (7) asignacion -> . variable ASIGNACION valores
    (8) impresion -> . PUTS PARENTESIS_IZQ argumentos PARENTESIS_DER
    (9) array -> . CORCHETE_IZQ argumentos CORCHETE_DER
    (10) condicion -> . if
    (11) condicion -> . if_else
    (12) condicion -> . if_elsif_else
    (51) variable -> . VARIABLE_LOCAL
    (52) variable -> . VARIABLE_GLOBAL
    (53) variable -> . VARIABLE_INSTANCIA
    (54) variable -> . VARIABLE_CLASE
    (13) if -> . IF expresion instrucciones END_BLOCK
    (14) if -> . IF expresion THEN instrucciones END_BLOCK
    (15) if_else -> . IF expresion instrucciones ELSE instrucciones END_BLOCK
    (16) if_else -> . IF expresion THEN instrucciones ELSE instrucciones END_BLOCK
    (17) if_elsif_else -> . IF expresion instrucciones elsif_clauses END_BLOCK
    (18) if_elsif_else -> . IF expresion THEN instrucciones elsif_clauses END_BLOCK
    (19) if_elsif_else -> . IF expresion instrucciones elsif_clauses ELSE instrucciones END_BLOCK
    (20) if_elsif_else -> . IF expresion THEN instrucciones elsif_clauses ELSE instrucciones END_BLOCK

    $end            reduce using rule 1 (programa -> sentencia .)
    PUTS            shift and go to state 8
    CORCHETE_IZQ    shift and go to state 9
    VARIABLE_LOCAL  shift and go to state 13
    VARIABLE_GLOBAL shift and go to state 14
    VARIABLE_INSTANCIA shift and go to state 15
    VARIABLE_CLASE  shift and go to state 16
    IF              shift and go to state 17

    sentencia                      shift and go to state 2
    programa                       shift and go to state 18
    asignacion                     shift and go to state 3
    impresion                      shift and go to state 4
    array                          shift and go to state 5
    condicion                      shift and go to state 6
    variable                       shift and go to state 7
    if                             shift and go to state 10
    if_else                        shift and go to state 11
    if_elsif_else                  shift and go to state 12

state 3

    (3) sentencia -> asignacion .

    PUTS            reduce using rule 3 (sentencia -> asignacion .)
    CORCHETE_IZQ    reduce using rule 3 (sentencia -> asignacion .)
    VARIABLE_LOCAL  reduce using rule 3 (sentencia -> asignacion .)
    VARIABLE_GLOBAL reduce using rule 3 (sentencia -> asignacion .)
    VARIABLE_INSTANCIA reduce using rule 3 (sentencia -> asignacion .)
    VARIABLE_CLASE  reduce using rule 3 (sentencia -> asignacion .)
    IF              reduce using rule 3 (sentencia -> asignacion .)
    $end            reduce using rule 3 (sentencia -> asignacion .)


state 4

    (4) sentencia -> impresion .

    PUTS            reduce using rule 4 (sentencia -> impresion .)
    CORCHETE_IZQ    reduce using rule 4 (sentencia -> impresion .)
    VARIABLE_LOCAL  reduce using rule 4 (sentencia -> impresion .)
    VARIABLE_GLOBAL reduce using rule 4 (sentencia -> impresion .)
    VARIABLE_INSTANCIA reduce using rule 4 (sentencia -> impresion .)
    VARIABLE_CLASE  reduce using rule 4 (sentencia -> impresion .)
    IF              reduce using rule 4 (sentencia -> impresion .)
    $end            reduce using rule 4 (sentencia -> impresion .)


state 5

    (5) sentencia -> array .

    PUTS            reduce using rule 5 (sentencia -> array .)
    CORCHETE_IZQ    reduce using rule 5 (sentencia -> array .)
    VARIABLE_LOCAL  reduce using rule 5 (sentencia -> array .)
    VARIABLE_GLOBAL reduce using rule 5 (sentencia -> array .)
    VARIABLE_INSTANCIA reduce using rule 5 (sentencia -> array .)
    VARIABLE_CLASE  reduce using rule 5 (sentencia -> array .)
    IF              reduce using rule 5 (sentencia -> array .)
    $end            reduce using rule 5 (sentencia -> array .)


state 6

    (6) sentencia -> condicion .

    PUTS            reduce using rule 6 (sentencia -> condicion .)
    CORCHETE_IZQ    reduce using rule 6 (sentencia -> condicion .)
    VARIABLE_LOCAL  reduce using rule 6 (sentencia -> condicion .)
    VARIABLE_GLOBAL reduce using rule 6 (sentencia -> condicion .)
    VARIABLE_INSTANCIA reduce using rule 6 (sentencia -> condicion .)
    VARIABLE_CLASE  reduce using rule 6 (sentencia -> condicion .)
    IF              reduce using rule 6 (sentencia -> condicion .)
    $end            reduce using rule 6 (sentencia -> condicion .)


state 7

    (7) asignacion -> variable . ASIGNACION valores

    ASIGNACION      shift and go to state 19


state 8

    (8) impresion -> PUTS . PARENTESIS_IZQ argumentos PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 20


state 9

    (9) array -> CORCHETE_IZQ . argumentos CORCHETE_DER
    (57) argumentos -> . argumento
    (58) argumentos -> . argumento COMA argumentos
    (59) argumento -> . booleano
    (60) argumento -> . operacionAritmetica
    (61) argumento -> . array
    (62) argumento -> . empty
    (55) booleano -> . FALSE
    (56) booleano -> . TRUE
    (72) operacionAritmetica -> . valor
    (73) operacionAritmetica -> . valor operador operacionAritmetica
    (9) array -> . CORCHETE_IZQ argumentos CORCHETE_DER
    (63) empty -> .
    (68) valor -> . NUMERO
    (69) valor -> . FLOTANTE
    (70) valor -> . CADENA
    (71) valor -> . variable
    (51) variable -> . VARIABLE_LOCAL
    (52) variable -> . VARIABLE_GLOBAL
    (53) variable -> . VARIABLE_INSTANCIA
    (54) variable -> . VARIABLE_CLASE

    FALSE           shift and go to state 27
    TRUE            shift and go to state 28
    CORCHETE_IZQ    shift and go to state 9
    COMA            reduce using rule 63 (empty -> .)
    CORCHETE_DER    reduce using rule 63 (empty -> .)
    NUMERO          shift and go to state 30
    FLOTANTE        shift and go to state 31
    CADENA          shift and go to state 32
    VARIABLE_LOCAL  shift and go to state 13
    VARIABLE_GLOBAL shift and go to state 14
    VARIABLE_INSTANCIA shift and go to state 15
    VARIABLE_CLASE  shift and go to state 16

    argumentos                     shift and go to state 21
    argumento                      shift and go to state 22
    booleano                       shift and go to state 23
    operacionAritmetica            shift and go to state 24
    array                          shift and go to state 25
    empty                          shift and go to state 26
    valor                          shift and go to state 29
    variable                       shift and go to state 33

state 10

    (10) condicion -> if .

    PUTS            reduce using rule 10 (condicion -> if .)
    CORCHETE_IZQ    reduce using rule 10 (condicion -> if .)
    VARIABLE_LOCAL  reduce using rule 10 (condicion -> if .)
    VARIABLE_GLOBAL reduce using rule 10 (condicion -> if .)
    VARIABLE_INSTANCIA reduce using rule 10 (condicion -> if .)
    VARIABLE_CLASE  reduce using rule 10 (condicion -> if .)
    IF              reduce using rule 10 (condicion -> if .)
    $end            reduce using rule 10 (condicion -> if .)
    PUNTO_Y_COMA    reduce using rule 10 (condicion -> if .)
    END_BLOCK       reduce using rule 10 (condicion -> if .)
    ELSE            reduce using rule 10 (condicion -> if .)
    ELSIF           reduce using rule 10 (condicion -> if .)


state 11

    (11) condicion -> if_else .

    PUTS            reduce using rule 11 (condicion -> if_else .)
    CORCHETE_IZQ    reduce using rule 11 (condicion -> if_else .)
    VARIABLE_LOCAL  reduce using rule 11 (condicion -> if_else .)
    VARIABLE_GLOBAL reduce using rule 11 (condicion -> if_else .)
    VARIABLE_INSTANCIA reduce using rule 11 (condicion -> if_else .)
    VARIABLE_CLASE  reduce using rule 11 (condicion -> if_else .)
    IF              reduce using rule 11 (condicion -> if_else .)
    $end            reduce using rule 11 (condicion -> if_else .)
    PUNTO_Y_COMA    reduce using rule 11 (condicion -> if_else .)
    END_BLOCK       reduce using rule 11 (condicion -> if_else .)
    ELSE            reduce using rule 11 (condicion -> if_else .)
    ELSIF           reduce using rule 11 (condicion -> if_else .)


state 12

    (12) condicion -> if_elsif_else .

    PUTS            reduce using rule 12 (condicion -> if_elsif_else .)
    CORCHETE_IZQ    reduce using rule 12 (condicion -> if_elsif_else .)
    VARIABLE_LOCAL  reduce using rule 12 (condicion -> if_elsif_else .)
    VARIABLE_GLOBAL reduce using rule 12 (condicion -> if_elsif_else .)
    VARIABLE_INSTANCIA reduce using rule 12 (condicion -> if_elsif_else .)
    VARIABLE_CLASE  reduce using rule 12 (condicion -> if_elsif_else .)
    IF              reduce using rule 12 (condicion -> if_elsif_else .)
    $end            reduce using rule 12 (condicion -> if_elsif_else .)
    PUNTO_Y_COMA    reduce using rule 12 (condicion -> if_elsif_else .)
    END_BLOCK       reduce using rule 12 (condicion -> if_elsif_else .)
    ELSE            reduce using rule 12 (condicion -> if_elsif_else .)
    ELSIF           reduce using rule 12 (condicion -> if_elsif_else .)


state 13

    (51) variable -> VARIABLE_LOCAL .

    ASIGNACION      reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MAS             reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MENOS           reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MULTIPLICAR     reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    DIVIDIR         reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MODULO          reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    EXPONENCIACION  reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    COMA            reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    CORCHETE_DER    reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MAYOR_QUE       reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MENOR_QUE       reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    IGUAL_IGUAL     reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    DIFERENTE       reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MAYOR_IGUAL     reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    MENOR_IGUAL     reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    THEN            reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    AND             reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    OR              reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    NOT             reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    PUTS            reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    VARIABLE_LOCAL  reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    VARIABLE_GLOBAL reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    VARIABLE_INSTANCIA reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    VARIABLE_CLASE  reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    IF              reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    CORCHETE_IZQ    reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    $end            reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    PUNTO_Y_COMA    reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    END_BLOCK       reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    ELSE            reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    ELSIF           reduce using rule 51 (variable -> VARIABLE_LOCAL .)
    PARENTESIS_DER  reduce using rule 51 (variable -> VARIABLE_LOCAL .)


state 14

    (52) variable -> VARIABLE_GLOBAL .

    ASIGNACION      reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MAS             reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MENOS           reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MULTIPLICAR     reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    DIVIDIR         reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MODULO          reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    EXPONENCIACION  reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    COMA            reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    CORCHETE_DER    reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MAYOR_QUE       reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MENOR_QUE       reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    IGUAL_IGUAL     reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    DIFERENTE       reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MAYOR_IGUAL     reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    MENOR_IGUAL     reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    THEN            reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    AND             reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    OR              reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    NOT             reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    PUTS            reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_LOCAL  reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_GLOBAL reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_INSTANCIA reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_CLASE  reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    IF              reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    CORCHETE_IZQ    reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    $end            reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    PUNTO_Y_COMA    reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    END_BLOCK       reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    ELSE            reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    ELSIF           reduce using rule 52 (variable -> VARIABLE_GLOBAL .)
    PARENTESIS_DER  reduce using rule 52 (variable -> VARIABLE_GLOBAL .)


state 15

    (53) variable -> VARIABLE_INSTANCIA .
